# dop

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml  release.yml
scripts/: test.sh
src/: common.rs  json.rs  lua.rs  main.rs  path.rs  script_lib.rs  toml.rs  types.rs  value.rs  yaml.rs
tests/: begin  convert  edge_cases  exec_once  field_name  formats  json__map_array  json__transform  json_edge_cases  key_filtering  lib_exec  lib_get  lib_is_bool  lib_is_list  lib_is_number  lib_is_object  lib_is_string  lib_key_match  lib_set  lib_unset  list_is_string  map_array__json  map_array__yaml  map_object  map_object__json  map_object__yaml  map_scalar__json  null  overwrite_output  pretty  query  remove__json  remove__yaml  remove_from_outside  script_as_file.sh  set  set__json  set_force  set_root  toml_edge_cases  (+4 more)
