[package]
name = "dop"
version = "0.2.2"
edition = "2024"
rust-version = "1.90"
description = "Process, transform and query JSON/YAML/TOML, from the shell."
readme = "README.md"
license = "MIT"
repository = "https://github.com/dhuan/dop"
homepage = "https://github.com/dhuan/dop"
documentation = "https://docs.rs/dop"
keywords = ["json", "yaml", "toml", "cli", "lua"]
categories = ["command-line-utilities", "encoding"]

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "unstable-doc"] }
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serde", "serialize"] }
regex = "1.12.2"
serde = {version = "1.0.228", features = ["derive", "serde_derive"]}
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.10"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
